particles修改添加背景色

--- a/输入框特效/index.html
+++ b/输入框特效/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <input type="text" placeholder="请输入关键词">
+<input type="text" placeholder="55">
 
 <script type="text/javascript" src="js/index.js"></script>
 
